--- a/sample_project/index.html
+++ b/sample_project/index.html
@@ -15,8 +15,13 @@ after html i.e html5 -->
     <link rel="stylesheet" href="css/materialize.min.css">
   </head>
   <body>
-
-
+    <div id="landing">
+      <div class="overlay">
+        <div class="navigation">
+                    
+        </div>
+      </div>
+    </div>
   </body>
   <!--Load the javascript files at the BOTTOM of the page to reduce page load speed-->
   <!--Javascript makes the page more dynamic and very interactive.
