Added custom font and background to sample project

--- a/sample_project/index.html
+++ b/sample_project/index.html
@@ -5,7 +5,7 @@ after html i.e html5 -->
 <html lan="en">
   <head>
     <meta charset="utf-8">
-    <title>Projex</title>
+    <title>Me</title>
     <!--The meta tags here simply give more information to the browser
         concerning the page that it's about to load-->
     <meta name="description" content="Projex">
@@ -17,8 +17,10 @@ after html i.e html5 -->
   <body>
     <div id="landing">
       <div class="overlay">
-        <div class="navigation">
-                    
+        <div class="header mine center-align #ffffff white-text">
+          <h1>#AWTC 2015</h1>
+          <h3>HTML/CSS</h3>
+          <h5 class="valign">This is web design</h5>
         </div>
       </div>
     </div>
