New Stylesheet: Larger font and rearranged headings

--- a/sample_project/index.html
+++ b/sample_project/index.html
@@ -11,7 +11,9 @@ after html i.e html5 -->
     <meta name="description" content="Projex">
     <!--Link to the stylesheets. This loads all the stylesheets: the backbone of
         styling any webpage-->
-    <link rel="stylesheet" href="css/mystyle.css">
+<!--    <link rel="stylesheet" href="css/mystyle.css">-->
+      <link rel="stylesheet" href="css/mystyle2.css">
+
     <link rel="stylesheet" href="css/materialize.min.css">
   </head>
   <body>
@@ -20,7 +22,7 @@ after html i.e html5 -->
         <div class="header mine center-align #ffffff white-text">
           <h1>#AWTC 2015</h1>
           <h3>HTML/CSS</h3>
-          <h5 class="valign">This is web design</h5>
+          <h5 class="valign">-This is web design-</h5>
         </div>
       </div>
     </div>
