--- a/sample_project/index.html
+++ b/sample_project/index.html
@@ -19,8 +19,8 @@ after html i.e html5 -->
     <div id="landing">
       <div class="overlay">
         <div class="header mine center-align #ffffff white-text">
-          <h1>#AWTC 2015</h1>
-            <h3>HTML/CSS</h3>
+          <h1>WIT 2015</h1>
+            <h3>Nairobi Design Week</h3>
             <h5 class="valign">-This is web design-</h5>
         </div>
       </div>
